fixed flex-alignment

--- a/src/styles/components/_block-2col.scss
+++ b/src/styles/components/_block-2col.scss
@@ -13,7 +13,7 @@
     .content-2col__text {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       // gap: $grid-spacing-sm;
       // padding: $padding-md 0;
 
